--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
 html,
 body {
   height: 100vh;
+  overflow: hidden;
+}
+
+html {
+  height: 100%;
 }
 
 body {
@@ -22,13 +27,12 @@ body {
 }
 
 .content-container {
-  width: 31rem;
+  max-width: 30rem;
   display: flex;
+  width: 100%;
   flex-direction: column;
   background: #222222;
-  border-left: 5px solid #171717;
-  border-right: 5px solid #171717;
-  outline: 5px solid #333333;
+  margin: 0 .5rem;
 }
 
 h1 {
@@ -37,16 +41,15 @@ h1 {
 }
 
 .game-container {
-  height: 75%;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 #score-container {
-  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,20 +57,7 @@ h1 {
 }
 
 #score-container p {
-  font-size: 1.5rem;
-}
-
-.display-container {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 1rem;
-}
-
-#word-container {
-  margin-bottom: 2rem;
+  font-size: 1rem;
 }
 
 #word-container,
@@ -76,6 +66,7 @@ h1 {
   font-size: 2rem;
   background: #171717;
   padding: .25rem;
+  width: 100%;
 }
 
 #input-container.shake {
@@ -85,19 +76,16 @@ h1 {
 
 #word-container div,
 #input-container div {
+  height: 4rem;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 2.25rem;
-  height: 3.5rem;
-  margin: 3px;
   border: 2px solid #333333;
 }
 
 #scrmbl-button {
   display: flex;
-  position: absolute;
-  top: 16.5rem;
   align-items: center;
   justify-content: center;
   width: 4rem;
@@ -117,27 +105,25 @@ h1 {
 }
 
 #keyboard-container {
-  max-width: 31rem;
   width: 100%;
   background: #171717;
-  bottom: 0;
-  position: fixed;
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding: 1rem 0;
+  padding: .5rem .5rem;
 }
 
 .keyboard-row {
   display: flex;
+  width: 100%;
   align-items: center;
 }
 
 .keyboard-row button {
   background: #444444;
-  width: 2.75rem;
+  margin: 3px;
+  width: 100%;
   height: 4rem;
-  margin: 2px;
   font-size: 1.25rem;
   cursor: pointer;
   transition: background 150ms;
@@ -149,8 +135,8 @@ h1 {
 
 .keyboard-row .enter,
 .keyboard-row .delete {
+  width: 3.25rem;
   font-size: .75rem;
-  width: 4rem;
 }
 
 @keyframes shake {
