--- a/style.css
+++ b/style.css
@@ -26,6 +26,26 @@ body {
   background: #171717;
 }
 
+#info-container {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #171717;
+  z-index: 1;
+  top: 0;
+}
+
+#info-container.active {
+  animation: slideDown 500ms;
+}
+
+#info-container.inactive {
+  animation: slideUp 500ms;
+  top: -100%;
+}
+
 .content-container {
   max-width: 30rem;
   display: flex;
@@ -135,7 +155,6 @@ h1 {
 
 .keyboard-row .enter,
 .keyboard-row .delete {
-  width: 3.25rem;
   font-size: .75rem;
 }
 
@@ -151,4 +170,14 @@ h1 {
   80% { transform: translate(-1px, -1px) rotate(1deg); }
   90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+@keyframes slideDown {
+  0% { top: -100%; }
+  100% { top: 0; }
+}
+
+@keyframes slideUp {
+  0% { top: 0; }
+  100% { top: -100%; }
 }
