--- a/style.css
+++ b/style.css
@@ -26,24 +26,8 @@ body {
   background: #171717;
 }
 
-#info-container {
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: #171717;
-  z-index: 1;
-  top: 0;
-}
-
-#info-container.active {
-  animation: slideDown 500ms;
-}
-
-#info-container.inactive {
-  animation: slideUp 500ms;
-  top: -100%;
+button {
+  transition: background 150ms;
 }
 
 .content-container {
@@ -52,12 +36,17 @@ body {
   width: 100%;
   flex-direction: column;
   background: #222222;
-  margin: 0 .5rem;
+  padding: 0 1rem;
 }
 
 h1 {
   padding: .5rem;
-  border-bottom: 4px solid #171717;
+}
+
+hr {
+  background: #171717;
+  margin: .25rem 0;
+  height: .25rem;
 }
 
 .game-container {
@@ -73,7 +62,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  top: 10rem;
+  margin-top: 1rem;
 }
 
 #score-container p {
@@ -113,7 +102,6 @@ h1 {
   background: #444444;
   border-radius: 50px;
   cursor: pointer;
-  transition: background 150ms;
 }
 
 #scrmbl-button:active {
@@ -146,16 +134,103 @@ h1 {
   height: 4rem;
   font-size: 1.25rem;
   cursor: pointer;
-  transition: background 150ms;
+}
+
+.keyboard-row button:hover {
+  background: #373737;
 }
 
 .keyboard-row button:active {
-  background: #333333;
+  background: #272727;
 }
 
-.keyboard-row .enter,
+.keyboard-row .enter {
+  font-size: .75rem;
+  padding: 0 .75rem;
+}
+
 .keyboard-row .delete {
   font-size: .75rem;
+  padding: 0 .65rem;
+}
+
+.keyboard-row .a {
+  margin-left: 1.5rem;
+}
+
+.keyboard-row .l {
+  margin-right: 1.5rem;
+}
+
+#info-container {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #222222;
+  top: -100%;
+  bottom: 14rem;
+  z-index: 1;
+}
+
+#info-container.active {
+  animation: slideDown 500ms;
+  top: 5rem;
+}
+
+#info-container.inactive {
+  animation: slideUp 500ms;
+  top: -100%;
+  bottom: 100%;
+}
+
+#info-container h2,
+#info-container h3,
+#info-container li {
+  margin: 1rem;
+  list-style: none;
+}
+
+#info-container h3 {
+  text-decoration: underline;
+  margin-bottom: 2rem;
+}
+
+#info-container li {
+  margin: 1rem;
+}
+
+#info-view {
+  display: none;
+  flex-direction: column;
+}
+
+#start-view.active {
+  display: flex;
+}
+
+#start-button {
+  background: #FFFFFF;
+  margin: auto;
+  margin-top: 2rem;
+  font-size: 1rem;
+  color: #222222;
+  width: 6rem;
+  height: 3rem;
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+#start-button:hover {
+  background: #DDDDDD;
+}
+
+#start-button:active {
+  background: #BBBBBB;
+}
+
+#gameover-view {
+  display: none;
 }
 
 @keyframes shake {
@@ -174,10 +249,10 @@ h1 {
 
 @keyframes slideDown {
   0% { top: -100%; }
-  100% { top: 0; }
+  100% { top: 5rem; }
 }
 
 @keyframes slideUp {
-  0% { top: 0; }
+  0% { top: 5rem; }
   100% { top: -100%; }
 }
