--- a/style.css
+++ b/style.css
@@ -164,24 +164,18 @@ hr {
 
 #info-container {
   position: fixed;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   background: #222222;
-  top: -100%;
+  top: 5rem;
   bottom: 14rem;
   z-index: 1;
+  width: 100%;
 }
 
 #info-container.active {
-  animation: slideDown 500ms;
-  top: 5rem;
-}
-
-#info-container.inactive {
-  animation: slideUp 500ms;
-  top: -100%;
-  bottom: 100%;
+  display: flex;
 }
 
 #info-container h2,
@@ -200,9 +194,10 @@ hr {
   margin: 1rem;
 }
 
-#info-view {
+.info-view {
   display: none;
   flex-direction: column;
+  width: 100%;
 }
 
 #start-view.active {
@@ -211,8 +206,6 @@ hr {
 
 #start-button {
   background: #FFFFFF;
-  margin: auto;
-  margin-top: 2rem;
   font-size: 1rem;
   color: #222222;
   width: 6rem;
@@ -233,6 +226,10 @@ hr {
   display: none;
 }
 
+#gameover-view.active {
+  display: flex;
+}
+
 @keyframes shake {
   0% { transform: translate(1px, 1px) rotate(0deg); }
   10% { transform: translate(-1px, -2px) rotate(-1deg); }
@@ -245,14 +242,4 @@ hr {
   80% { transform: translate(-1px, -1px) rotate(1deg); }
   90% { transform: translate(1px, 2px) rotate(0deg); }
   100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-
-@keyframes slideDown {
-  0% { top: -100%; }
-  100% { top: 5rem; }
-}
-
-@keyframes slideUp {
-  0% { top: 5rem; }
-  100% { top: -100%; }
 }
