--- a/style.css
+++ b/style.css
@@ -14,11 +14,13 @@ color: #E3B825
   border: none;
   font-weight: 700;
   user-select: none;
+  touch-action: manipulation
 }
 
 html,
 body {
-  height: 100vh;
+  margin: 0;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -136,8 +138,7 @@ button {
   background: #171816;
   border-radius: 50px;
   cursor: pointer;
-  outline: 2px solid #E3B825;
-  border: 5px solid #544722;
+  border: 2px solid #E3B825;
 }
 
 #scrmbl-button:active {
@@ -145,7 +146,7 @@ button {
 }
 
 #scrmbl-button i {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #E3B825;
 }
 
