--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ button {
   align-items: center;
 }
 
-.keyboard-row button {
+.key {
   background: #444444;
   margin: 3px;
   width: 100%;
@@ -182,29 +182,33 @@ button {
   cursor: pointer;
 }
 
-.keyboard-row button:hover {
+.key:hover {
   background: #373737;
 }
 
-.keyboard-row button:active {
+.key:active {
   background: #272727;
 }
 
-.keyboard-row .enter {
+.key.fade {
+  color: #2c2e2a;
+}
+
+.enter {
   font-size: .75rem;
   padding: 0 .75rem;
 }
 
-.keyboard-row .delete {
+.delete {
   font-size: .75rem;
   padding: 0 .65rem;
 }
 
-.keyboard-row .a {
+.a {
   margin-left: 1.5rem;
 }
 
-.keyboard-row .l {
+.l {
   margin-right: 1.5rem;
 }
 
