--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ color: #E3B825
   border: none;
   font-weight: 700;
   user-select: none;
-  touch-action: manipulation
+  touch-action: manipulation;
+  text-decoration: none;
 }
 
 html,
@@ -301,6 +302,18 @@ button {
 
 #share-button:active {
   background: #BBBBBB;
+}
+
+#coffee {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #FFFFFF;
+  border-radius: .5rem;
+  width: 50%;
+  margin: auto;
+  margin-top: 2rem;
 }
 
 @keyframes shake {
