--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,14 @@
   color: #ffffff;
 }
 
-body,
-html {
+body, html {
   height: 100%;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #dfba3c;
+  overflow: hidden;
 }
 
 body {
