fix mobile styling

--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,13 @@ body, html {
   align-items: center;
   justify-content: center;
   background: #dfba3c;
-  overflow: hidden;
 }
 
-body {
+#root {
+  width: 100%;
+  height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background: #dfba3c;
